Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7272

Fix potential crash when a min-max runtime filter is generated for a string value

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.11.0, Impala 2.12.0
    • Impala 3.1.0
    • Backend
    • apache branch [329979d6fb0caa0dc449d7e0aa75460c30e868f0]

      centos 6.5

       ./buildall.sh -skiptests -noclean -asan

    Description

      (gdb) bt
      #0 0x0000003269832635 in raise () from /lib64/libc.so.6
      #1 0x0000003269833e15 in abort () from /lib64/libc.so.6
      #2 0x0000000004010f64 in google::DumpStackTraceAndExit() ()
      #3 0x00000000040079dd in google::LogMessage::Fail() ()
      #4 0x0000000004009282 in google::LogMessage::SendToLog() ()
      #5 0x00000000040073b7 in google::LogMessage::Flush() ()
      #6 0x000000000400a97e in google::LogMessageFatal::~LogMessageFatal() ()
      #7 0x0000000001a2dfab in impala::MemPool::CheckIntegrity (this=0x5916e1f8, check_current_chunk_empty=true)
      at /export/ldb/online/kudu_rpc_branch/be/src/runtime/mem-pool.cc:258
      #8 0x0000000001a2cf56 in impala::MemPool::FindChunk (this=0x5916e1f8, min_size=10, check_limits=true) at /export/ldb/online/kudu_rpc_branch/be/src/runtime/mem-pool.cc:158
      #9 0x0000000001a3dd1b in impala::MemPool::Allocate<true> (alignment=8, size=10, this=0x5916e1f8) at /export/ldb/online/kudu_rpc_branch/be/src/runtime/mem-pool.h:273
      #10 impala::MemPool::TryAllocate (this=0x5916e1f8, size=10) at /export/ldb/online/kudu_rpc_branch/be/src/runtime/mem-pool.h:109
      #11 0x0000000001caefb8 in impala::StringBuffer::GrowBuffer (this=0x7f90d9489c28, new_size=10) at /export/ldb/online/kudu_rpc_branch/be/src/runtime/string-buffer.h:85
      #12 0x0000000001caee18 in impala::StringBuffer::Append (this=0x7f90d9489c28, str=0x7f92cda6e039 "1104700843dongna@jd.com业务运营部\230\340\246͒\177", str_len=10)
      at /export/ldb/online/kudu_rpc_branch/be/src/runtime/string-buffer.h:53
      #13 0x0000000001cac864 in impala::StringMinMaxFilter::CopyToBuffer (this=0x7f90d9489c00, buffer=0x7f90d9489c28, value=0x7f90d9489c08, len=10)
      at /export/ldb/online/kudu_rpc_branch/be/src/util/min-max-filter.cc:304
      #14 0x0000000001cac2a9 in impala::StringMinMaxFilter::MaterializeValues (this=0x7f90d9489c00) at /export/ldb/online/kudu_rpc_branch/be/src/util/min-max-filter.cc:229
      #15 0x0000000002b9641a in impala::FilterContext::MaterializeValues (this=0x61cc0b70) at /export/ldb/online/kudu_rpc_branch/be/src/exec/filter-context.cc:97
      #16 0x00007f93fdb9440e in ?? ()
      #17 0x00007f90a97f5400 in ?? ()
      #18 0x2acd2bba01a2e0f7 in ?? ()
      #19 0x000000005916e140 in ?? ()
      #20 0x00007f930c34d740 in ?? ()
      #21 0x00007f90a97f5220 in ?? ()
      #22 0x66aa77bb66aa77bb in ?? ()
      #23 0x0000000061cc0b70 in ?? ()
      #24 0x0000000061cc0b70 in ?? ()
      #25 0x0000000061cc0b98 in ?? ()
      #26 0x0000000061cc0b70 in ?? ()
      #27 0x00007f90a97f5300 in ?? ()
      #28 0x0000000001ab84ed in impala::RuntimeFilterBank::AllocateScratchMinMaxFilter (this=<error reading variable: Cannot access memory at address 0xffffffffffffff4f>,
      filter_id=<error reading variable: Cannot access memory at address 0xffffffffffffff4b>,
      type=<error reading variable: Cannot access memory at address 0xffffffffffffff3f>) at /export/ldb/online/kudu_rpc_branch/be/src/runtime/runtime-filter-bank.cc:250
      Backtrace stopped: previous frame inner to this frame (corrupt stack?)

      Attachments

        1. testing_impala.sh
          13 kB
          yyzzjj
        2. e4386102-833c-40bb-4eec10b2-827c76be.dmp
          7.43 MB
          yyzzjj
        3. impalad_node0.ERROR
          2 kB
          yyzzjj
        4. impalad_node0.WARNING
          2 kB
          yyzzjj

        Issue Links

          Activity

            People

              twmarshall Thomas Tauber-Marshall
              zzjj yyzzjj
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: